# CSTUFF

./: README.md
da/: da.c  da.h  da_test.c
grammar/: Makefile  README.md  lex.c  lex.h  lr.c  lr.h  test.c  test.grammar
lang/: .clangd  .gitignore  Makefile  README.md  TODO.md  build.sh  fail.c  fail.h  foo.txt  gen.c  gen.h  interpret.c  interpret.h  langc.h  lex.c  lex.h  lexer-test  lexer_test.c  main.c  parser.c  parser.h  parser_test.c  run.sh  symbol.c  symbol.h  symbol_table.c  symbol_table.h  symbol_type_test.c  tac.c  tac.h  tmp.lang  tree.c  tree.h  tree_transform.c  tree_transform.h  type.c  type.h
lang-lsp/: .clangd  .gitignore  Makefile  PLAN.md  README.md  json.c  json.h  json_rpc.c  json_rpc.h  json_types.h  log.c  log.h  main.c  semantic_tokens.c  semantic_tokens.h  util.c  util.h
lang/example-files/: bst.lang  rule110.lang
lang/langc-impl/: README.md  langc.lang
lang/langc-impl/ideas/: da.lang  enum.lang
lang/langc-impl/v0/: README.md  langc
lang/std/: libc.lang
lang/test/: runner.py  tests.json
lang/test-files/: arr.lang  euler3.lang  hello.lang  real.lang  rule110.lang  scope.lang  sieve.lang  simple-func.lang  simple-if.lang  simple-while.lang  simple.lang  sorting.lang  test.lang
regex/: .gitignore  CMakeLists.txt  Makefile  README.md  dfa.c  dfa.h  dfa_test.c  nfa.c  nfa.h  nfa_test.c  preprocess.c  preprocess.h  preprocess_test.c  regex_gen.c  regex_gen.h
ted/: .gitignore  Makefile  command.c  command.h  context.c  context.h  foo.txt  gap_buffer.c  gap_buffer.h  main.c  ted_buffer.c  ted_buffer.h  test.c
(+76 files in other folders)
